# Pretty-Fast-Video

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.txt  README.md  test.pfv  test2.pfv
.cargo/: config.toml
demo/: Cargo.toml  test2.pfv
demo/src/: main.rs
src/: common.rs  dct.rs  dec.rs  enc.rs  frame.rs  huffman.rs  lib.rs  opencl.rs  plane.rs  qoa.rs  rle.rs
