[package]
name = "pfv-rs"
version = "0.1.1"
edition = "2021"
description = "Library for working with PFV (a toy MPEG-like video codec)"
license = "MIT"
repository = "https://github.com/GlaireDaggers/Pretty-Fast-Video"
authors = ["Hazel Stagner"]
exclude = ["*.png", "*.wav", "*.pfv", "/demo", "*.bin"]
categories = ["multimedia::video", "multimedia::encoding"]
keywords = ["codec", "video", "av"]

[features]
default = ["multithreading"]
multithreading = ["dep:rayon"]

[profile.test]
opt-level = 3

[dev-dependencies]
image = "0.24.6"
wav = "1.0.0"

[dependencies]
bitstream-io = "1.6.0"
byteorder = "1.4.3"
rayon = { version = "1.7.0", optional = true }
